--- a/BDC.html
+++ b/BDC.html
@@ -47,14 +47,14 @@
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
-									<li><a href="school.html">School</a></li>
-									<li><a href="CLP.html">CLP</a></li>
-									<li><a href="HPA.html">HPA</a></li>
-									<li><a href="Umang.html">Umang</a></li>
-									<li><a href="EAP.html">Events and Publicity</a></li>
-									<li><a href="Parisodh.html">Parishodh</a></li>
-									<li><a href="EPD.html">EPD</a></li>
-								</ul>
+                                    <li><a href="school.html">School</a></li>
+                                    <li><a href="CLP.html">Computer Literacy<br>Programme</a></li>
+                                    <li><a href="HPA.html">Health and Public<br>Awareness</a></li>
+                                    <li><a href="Umang.html">Umang</a></li>
+                                    <li><a href="EAP.html">Events and Publicity</a></li>
+                                    <li><a href="Parisodh.html">Parishodh</a></li>
+                                    <li><a href="EPD.html">English and Personality<br>Development</a></li>
+                                </ul>
 							</li>
 							<li class="dropdown active">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
@@ -76,7 +76,7 @@
 
 		<section id="error" class="container text-center">
 		<div>
-		<img src="images/events/bdc.jpg" alt="BDC Image">
+		<img src="images/events/bdc.jpg" class="img-responsive" style="horizontal-align:center;width:100%" alt="BDC Image">
 		</div>
 			<div class="container text-center">
 				<div class="row" id="curve" class="card-panel transparent blue-grey lighten-5 z-depth-2">
@@ -103,7 +103,7 @@ The Blood Donation Camp has helped NSS BITS Pilani achieve many milestones. A fe
 				<li>NSS of BITS Pilani was honored by Indian Red Cross Society on Friday 20th June 2014 for the highest collection of blood units among educational institutions of India during 2013-14. The trophy was presented by Dr Harsh Vardhan, Hon'ble Union Health Minister and Chairman, Indian Red Cross Society in the presence of Dr S P Aggarwal, General Secretary of Indian Red Cross Society, Dr V K Subburaj, Secretary, Ministry of Health and Dr Nata Menabde, Representative, WHO in a function held at Indian Red Cross Society Headquarters, Delhi.</li>
 			</ul>
 		</section>
-
+With such continued efforts and support of people who have helped made previous BDC’s a huge success we believe that we’ll cross the 1000 unit mark this year.
 
 					</p>
 				</div>
