--- a/CLP.html
+++ b/CLP.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<title>CLP | NSS BITS Pilani</title>
+		<title>Computer Literacy Programme | NSS BITS Pilani</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/prettyPhoto.css" rel="stylesheet">
@@ -47,14 +47,14 @@
 							<li class="dropdown active">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
-									<li><a href="school.html">School</a></li>
-									<li class="active"><a href="CLP.html">CLP</a></li>
-									<li><a href="HPA.html">HPA</a></li>
-									<li><a href="Umang.html">Umang</a></li>
-									<li><a href="EAP.html">Events and Publicity</a></li>
-									<li><a href="Parisodh.html">Parishodh</a></li>
-									<li><a href="EPD.html">EPD</a></li>
-								</ul>
+                                    <li><a href="school.html">School</a></li>
+                                    <li><a href="CLP.html">Computer Literacy<br>Programme</a></li>
+                                    <li><a href="HPA.html">Health and Public<br>Awareness</a></li>
+                                    <li><a href="Umang.html">Umang</a></li>
+                                    <li><a href="EAP.html">Events and Publicity</a></li>
+                                    <li><a href="Parisodh.html">Parishodh</a></li>
+                                    <li><a href="EPD.html">English and Personality<br>Development</a></li>
+                                </ul>
 							</li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
@@ -90,9 +90,9 @@
 			<div class="container text-center">
 				<div class="row" id="font">
 					<p class="section" style="text-align:justify">
-					CLP is a department of NSS BITS Pilani. It is an initiative to provide basic
+					Computer Literacy Programme is a department of NSS BITS Pilani. It is an initiative to provide basic
 computer literacy to the people of Pilani and nearby villages who do not have access to any computer education.
-CLP has been working with an approach to equip the learners with basic computer and data entry skills.
+Computer Literacy Programme has been working with an approach to equip the learners with basic computer and data entry skills.
 We aim to achieve a significant increase in the percentage of adults who have sufficient computer knowledge,
 so that they can be benefitted from the various upcoming government schemes or e-services.
 <section class="container" style="text-align:justify">              
@@ -100,7 +100,7 @@ so that they can be benefitted from the various upcoming government schemes or e
 </section>
 <section class="container" style="text-align:justify">
 <ul>
-<li>Presently, we are running RSCIT(Rajasthan State Certificate in Information Technology)programme at Pilani Resource Centre (PRC). RSCIT was started in PRC this year in March. 20 volunteers of CLP are actively working at the PRC lab. On an average 10-15 participants attend the lab, most of which are adults. Moreover, 3-5 women have a regular attendance. Till now 22 students had been enrolled in this program out of which 90% have successfully cleared the exam.</li>
+<li>Presently, we are running RSCIT(Rajasthan State Certificate in Information Technology)programme at Pilani Resource Centre (PRC). RSCIT was started in PRC this year in March. 20 volunteers of Computer Literacy Programme are actively working at the PRC lab. On an average 10-15 participants attend the lab, most of which are adults. Moreover, 3-5 women have a regular attendance. Till now 22 students had been enrolled in this program out of which 90% have successfully cleared the exam.</li>
 <li>We are also teaching English and Computer to the students of grade 6th, 7th and 8th in Rajkiya Ucch Prathamik Vidhyalaya school, Rayla to help them in becoming self-reliable in using computer and technology.</li>
 <li>We conduct surveys to statistically analyse the situation of the villages and take appropriate steps for their improvement. We conducted door to door mobilization and surveys in villages like Harinagar,Ghumensar,Hanumantpura and some remotes areas of Pilani to increase awareness about various schemes that are run by the government.</li>
 </ul>
