--- a/EPD.html
+++ b/EPD.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<title>EPD | NSS BITS Pilani</title>
+		<title>English and Personality Development | NSS BITS Pilani</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/prettyPhoto.css" rel="stylesheet">
@@ -47,14 +47,14 @@
 							<li class="dropdown active">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
-									<li><a href="school.html">School</a></li>
-									<li><a href="CLP.html">CLP</a></li>
-									<li><a href="HPA.html">HPA</a></li>
-									<li><a href="Umang.html">Umang</a></li>
-									<li><a href="EAP.html">Events and Publicity</a></li>
-									<li><a href="Parisodh.html">Parishodh</a></li>
-									<li class="active"><a href="EPD.html">EPD</a></li>
-								</ul>
+                                    <li><a href="school.html">School</a></li>
+                                    <li><a href="CLP.html">Computer Literacy<br>Programme</a></li>
+                                    <li><a href="HPA.html">Health and Public<br>Awareness</a></li>
+                                    <li><a href="Umang.html">Umang</a></li>
+                                    <li><a href="EAP.html">Events and Publicity</a></li>
+                                    <li><a href="Parisodh.html">Parishodh</a></li>
+                                    <li><a href="EPD.html">English and Personality<br>Development</a></li>
+                                </ul>
 							</li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
@@ -90,14 +90,14 @@
 			<div class="container text-center">
 				<div class="row" id="font">
 				<p class="section" style="text-align:justify">
-EPD aims to implant the seed of proper etiquettes and positive personality in all its students. Emphasis lies on all those virtues which are necessary for one to live a happy and successful life. We believe in the art of practice over that of rote learning, thus students are given activities, which would enhance parts of their core personality and fundamental development. Our focus further lies towards proper spoken English. Along with being taught how to correctly phrase sentences and write grammatically correctly, students learn how to read and comprehend passages, so that they need not struggle in the future.  We dream that none of our students ever face bias in society for their lack of lingual knowledge, and are able to achieve heights unimaginable by others.<br>
+English and Personality Development aims to implant the seed of proper etiquettes and positive personality in all its students. Emphasis lies on all those virtues which are necessary for one to live a happy and successful life. We believe in the art of practice over that of rote learning, thus students are given activities, which would enhance parts of their core personality and fundamental development. Our focus further lies towards proper spoken English. Along with being taught how to correctly phrase sentences and write grammatically correctly, students learn how to read and comprehend passages, so that they need not struggle in the future.  We dream that none of our students ever face bias in society for their lack of lingual knowledge, and are able to achieve heights unimaginable by others.<br>
 <section class="container" style="text-align:justify">              
 <b>WORKING:</b>
 </section>
 <section class="container" style="text-align:justify">
 <ul>
-<li>SEP classes focus on teaching grammar to EPD’s youngest generation. This involves nouns, adjectives, verbs and others components of English.</li>
-<li>EPD classes focus on moral values, along with personality development. Activities are held to improve their written and spoken English, as well as their reading skills.</li>
+<li>School English Programme classes focus on teaching grammar to youngest generation. This involves nouns, adjectives, verbs and others components of English.</li>
+<li>English and Personality Development classes focus on moral values, along with personality development. Activities are held to improve their written and spoken English, as well as their reading skills.</li>
 <li>COLLEGE CHAPTER focuses on how to speak English confidently, read it with proper pronunciation, and write it grammatically correctly.</li>
 </ul>
 </section>
