--- a/HPA.html
+++ b/HPA.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<title>HPA | NSS Bits Pilani</title>
+		<title>Health and Public Awareness | NSS Bits Pilani</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/prettyPhoto.css" rel="stylesheet">
@@ -47,14 +47,14 @@
 							<li class="dropdown active">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
-									<li><a href="school.html">School</a></li>
-									<li><a href="CLP.html">CLP</a></li>
-									<li class="active"><a href="HPA.html">HPA</a></li>
-									<li><a href="Umang.html">Umang</a></li>
-									<li><a href="EAP.html">Events and Publicity</a></li>
-									<li><a href="Parisodh.html">Parishodh</a></li>
-									<li><a href="EPD.html">EPD</a></li>
-								</ul>
+                                    <li><a href="school.html">School</a></li>
+                                    <li><a href="CLP.html">Computer Literacy<br>Programme</a></li>
+                                    <li><a href="HPA.html">Health and Public<br>Awareness</a></li>
+                                    <li><a href="Umang.html">Umang</a></li>
+                                    <li><a href="EAP.html">Events and Publicity</a></li>
+                                    <li><a href="Parisodh.html">Parishodh</a></li>
+                                    <li><a href="EPD.html">English and Personality<br>Development</a></li>
+                                </ul>
 							</li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
@@ -102,9 +102,9 @@ between people and government.
 <section class="container" style="text-align:justify">
 <ul>
    <li>It has worked on a few projects like water management with rainwater harvesting, water filtration, improving education facilities in Rayla school, smooth functioning of sanctioned medical vans, workshops on skill development for women.</li>
-   <li>Currently HPA is working on Vocational Training Center(VTC) Project, waste management in Jherli, awareness about the implementation of organic farming as a sustainable way of farming, resolving the electricity problem in Rayla.</li>
-   <li>The main villages where HPA focuses are:Rayla,Garinda,Jherli,Harinagar,Pilani rural</li>
-   <li>Apart from all the above sectors, HPA also works in a few other villages on occasional basis.</li>
+   <li>Currently Health and Public Awareness team is working on Vocational Training Center(VTC) Project, waste management in Jherli, awareness about the implementation of organic farming as a sustainable way of farming, resolving the electricity problem in Rayla.</li>
+   <li>The main villages where Health and Public Awareness team focuses are:Rayla,Garinda,Jherli,Harinagar,Pilani rural</li>
+   <li>Apart from all the above sectors, Health and Public Awareness team also works in a few other villages on occasional basis.</li>
 </ul>
 </section>
 
