--- a/school.html
+++ b/school.html
@@ -47,14 +47,14 @@
 							<li class="dropdown active">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
-									<li class="active"><a href="school.html">School</a></li>
-									<li><a href="CLP.html">CLP</a></li>
-									<li><a href="HPA.html">HPA</a></li>
-									<li><a href="Umang.html">Umang</a></li>
-									<li ><a href="EAP.html">Events and Publicity</a></li>
-									<li><a href="Parisodh.html">Parishodh</a></li>
-									<li><a href="EPD.html">EPD</a></li>
-								</ul>
+                                    <li><a href="school.html">School</a></li>
+                                    <li><a href="CLP.html">Computer Literacy<br>Programme</a></li>
+                                    <li><a href="HPA.html">Health and Public<br>Awareness</a></li>
+                                    <li><a href="Umang.html">Umang</a></li>
+                                    <li><a href="EAP.html">Events and Publicity</a></li>
+                                    <li><a href="Parisodh.html">Parishodh</a></li>
+                                    <li><a href="EPD.html">English and Personality<br>Development</a></li>
+                                </ul>
 							</li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
@@ -100,7 +100,7 @@ the founder-students felt their responsibility for giving back to the society.
 <ul>
 <li>NSS School facilitates the education of almost 100 students. We believe that the growth of children extends beyo the realm of education and, as a result, try to maintain a 1:1 ratio of volunteers to students to facilitate a closer bond between them.</li>
 <li>Over the year, School organises various events to inculcate and promote cultural spirt and sportsmanship amongst the students. These events, Udaan and Jazba respectively, are completely organised by the new recruits of NSS giving them valuable experience of event management and beautiful memories with the children.</li>
-<li>NSS School has also started the School English Program (SEP) in collaboration with English and Personality Development (EPD) department of NSS. This program aims to introduce English into the daily lives of the children, allowing them to seamlessly understand the language at later stages of their lives.</li>
+<li>NSS School has also started the School English Program (SEP) in collaboration with English and Personality Development (English and Personality Development) department of NSS. This program aims to introduce English into the daily lives of the children, allowing them to seamlessly understand the language at later stages of their lives.</li>
 <li>Most importantly, School aims to generate a mentor-student relation between volunteers and students. Home Visits and celebration of festivals together are key components of this endeavour. Over the years, many students and volunteers alike have left School as friends for life.</li>
 				</p>
 			</div>
