--- a/EAP.html
+++ b/EAP.html
@@ -47,14 +47,14 @@
 							<li class="dropdown active">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
-									<li><a href="school.html">School</a></li>
-									<li><a href="CLP.html">CLP</a></li>
-									<li><a href="HPA.html">HPA</a></li>
-									<li><a href="Umang.html">Umang</a></li>
-									<li class="active"><a href="EAP.html">Events and Publicity</a></li>
-									<li><a href="Parisodh.html">Parishodh</a></li>
-									<li><a href="EPD.html">EPD</a></li>
-								</ul>
+                                    <li><a href="school.html">School</a></li>
+                                    <li><a href="CLP.html">Computer Literacy<br>Programme</a></li>
+                                    <li><a href="HPA.html">Health and Public<br>Awareness</a></li>
+                                    <li><a href="Umang.html">Umang</a></li>
+                                    <li><a href="EAP.html">Events and Publicity</a></li>
+                                    <li><a href="Parisodh.html">Parishodh</a></li>
+                                    <li><a href="EPD.html">English and Personality<br>Development</a></li>
+                                </ul>
 							</li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
@@ -81,9 +81,9 @@
 			<div class="container text-center">
 				<div class="row" id="curve" class="card-panel transparent blue-grey lighten-5 z-depth-2">
 							<div class="col-xs-4 col-xs-offset-4">
-						<center><h1>Events for the Needy</h1></center>
+						<center><h1>Events and Publicity</h1></center>
 						<br>
-						<h3><font color="#5882FA"><center>The team that manages all the events of NSS BITS Pilani</font></h3>
+						<h3><font color="#5882FA"><center>Events for the Needy</font></h3>
 					</div>
 				</div>
 			</div>
