Changes adding meta tags shop for smile dhiti

--- a/CLP.html
+++ b/CLP.html
@@ -1,11 +1,21 @@
 	<!DOCTYPE html>
 	<html lang="en">
 	<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111722565-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111722565-1');
+</script>
+        <title>Computer Literacy Programme | NSS BITS Pilani</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<title>Computer Literacy Programme | NSS BITS Pilani</title>
+		<meta name="description" content="Computer Literacy Programme is a department of NSS BITS Pilani. It is an initiative to provide basic
+computer literacy to the people of Pilani and nearby villages who do not have access to any computer education.">
+		<meta name="keywords" content="clp,CLP,Clp,Computer,computer,Literacy,literacy,Programme,programme">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/prettyPhoto.css" rel="stylesheet">
@@ -60,9 +70,9 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
 									<li><a href="Junoon.html">Junoon</a></li>
-									<li><a href="Oasis.html">Oasis Stall</a></li>
+									<li><a href="Oasis.html">Shop For A Smile</a></li>
 									<li><a href="BDC.html">Blood Donation Camp</a></li>
-									<li><a href="YC.html">Youth Conference</a></li>
+									<li><a href="YC.html">Dhiti</a></li>
 								</ul>
 							</li>
 
@@ -146,8 +156,8 @@ so that they can be benefitted from the various upcoming government schemes or e
                         <ul>
                             <li><a href="Junoon.html">Junoon</a></li>
                             <li><a href="BDC.html">Blood Donation Camp</a></li>
-                            <li><a href="Oasis.html">Oasis Stall</a></li>
-                            <li><a href="YC.html">Youth Conference</a></li>
+                            <li><a href="Oasis.html">Shop For A Smile</a></li>
+                            <li><a href="YC.html">Dhiti</a></li>
 
                         </ul>
                     </div>
