--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="NSS BITS Pilani is a NSS chapter at BITS Pilani which is a family of over 250 volunteers that strive to uplift Pilani and its surroundings">
-    <meta name="keywords" content="NSS,nss,BITS,bits,Bits,Pilani,pilani,PILANI">
+    <meta name="keywords" content="NSS,nss,BITS,bits,Bits,Pilani,pilani,PILANI,Nss">
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js' type='text/javascript'>
 </script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
