Final Changes Dhiti Meta Tags Analytics Shop For Smile etc.

--- a/HPA.html
+++ b/HPA.html
@@ -10,12 +10,13 @@
 
   gtag('config', 'UA-111722565-1');
 </script>
-
+		<title>Health and Public Awareness | NSS Bits Pilani</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<title>Health and Public Awareness | NSS Bits Pilani</title>
+		<meta name="description" content="Health and public awareness, a joint department of Health and Public Awareness, is meant for
+spreading awareness among people on various social problems and aware them about potential
+solution of these problems.">
+		<meta name="keywords" content="HPA,Hpa,hpa,health,Health,Public,public,Awareness,awareness">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/prettyPhoto.css" rel="stylesheet">
@@ -70,9 +71,9 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
 									<li><a href="Junoon.html">Junoon</a></li>
-									<li><a href="Oasis.html">Oasis Stall</a></li>
+									<li><a href="Oasis.html">Shop For A Smile</a></li>
 									<li><a href="BDC.html">Blood Donation Camp</a></li>
-									<li><a href="YC.html">Youth Conference</a></li>
+									<li><a href="YC.html">Dhiti</a></li>
 								</ul>
 							</li>
 
@@ -160,8 +161,8 @@ between people and government.
                         <ul>
                             <li><a href="Junoon.html">Junoon</a></li>
                             <li><a href="BDC.html">Blood Donation Camp</a></li>
-                            <li><a href="Oasis.html">Oasis Stall</a></li>
-                            <li><a href="YC.html">Youth Conference</a></li>
+                            <li><a href="Oasis.html">Shop For A Smile</a></li>
+                            <li><a href="YC.html">Dhiti</a></li>
 
                         </ul>
                     </div>
