--- a/Junoon.html
+++ b/Junoon.html
@@ -10,12 +10,11 @@
 
   gtag('config', 'UA-111722565-1');
 </script>
-
+        <title>Junoon | NSS Bits Pilani</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
-    <title>Junoon | NSS Bits Pilani</title>
+		<meta name="description" content="Junoon, a unique sporting extravaganza for the specially abled youth of the country is now into its fourth edition. In this new edition of the event, we expect a participation of over 175 participants from all over the country with support from 8 NGOs.">
+		<meta name="keywords" content="junoon,Junoon,JUNOON,Nss,nss,NSS,Bits,BITS,bits,Pilani,pilani">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/prettyPhoto.css" rel="stylesheet">
@@ -70,9 +69,9 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
 									<li class="active"><a href="Junoon.html">Junoon</a></li>
-									<li ><a href="Oasis.html">Oasis Stall</a></li>
+									<li ><a href="Oasis.html">Shop For A Smile</a></li>
 									<li><a href="BDC.html">Blood Donation Camp</a></li>
-									<li><a href="YC.html">Youth Conference</a></li>
+									<li><a href="YC.html">Dhiti</a></li>
 								</ul>
 							</li>
 							
@@ -151,8 +150,8 @@
                         <ul>
                             <li><a href="Junoon.html">Junoon</a></li>
                             <li><a href="BDC.html">Blood Donation Camp</a></li>
-                            <li><a href="Oasis.html">Oasis Stall</a></li>
-                            <li><a href="YC.html">Youth Conference</a></li>
+                            <li><a href="Oasis.html">Shop For A Smile</a></li>
+                            <li><a href="YC.html">Dhiti</a></li>
                            
                         </ul>
                     </div>    
