--- a/Umang.html
+++ b/Umang.html
@@ -10,12 +10,11 @@
 
   gtag('config', 'UA-111722565-1');
 </script>
-
+		<title>Umang | NSS BITS Pilani</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<title>Umang | NSS BITS Pilani</title>
+		<meta name="description" content="We are Umang, and we bring change in Pilani through Our hard work and Education">
+		<meta name="keywords" content="Umang,umang,NSS,nss,Nss,bits,Bits,BITS,Pilani,pilani">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/prettyPhoto.css" rel="stylesheet">
@@ -70,9 +69,9 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
 									<li><a href="Junoon.html">Junoon</a></li>
-									<li><a href="Oasis.html">Oasis Stall</a></li>
+									<li><a href="Oasis.html">Shop For A Smile</a></li>
 									<li><a href="BDC.html">Blood Donation Camp</a></li>
-									<li><a href="YC.html">Youth Conference</a></li>
+									<li><a href="YC.html">Dhiti</a></li>
 								</ul>
 							</li>
 
@@ -154,8 +153,8 @@ We are Umang, and we bring change in Pilani through Our hard work and Education
                         <ul>
                             <li><a href="Junoon.html">Junoon</a></li>
                             <li><a href="BDC.html">Blood Donation Camp</a></li>
-                            <li><a href="Oasis.html">Oasis Stall</a></li>
-                            <li><a href="YC.html">Youth Conference</a></li>
+                            <li><a href="Oasis.html">Shop For A Smile</a></li>
+                            <li><a href="YC.html">Dhiti</a></li>
 
                         </ul>
                     </div>
