--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                         <img class="img-responsive" src="images/portfolio/recent/item4.jpg" alt="">
                         <div class="overlay">
                             <div class="recent-work-inner">
-                                <h3><a href="YC.html">Dhiti</a><br>Leading Endeavour to Achieve Progress</h3>
+                                <h3><a href="YC.html">Dhiti</a><br>Technology Reaching Its Destiny</h3>
                                 <a href="YC.html"><i class="fa fa-eye"></i> View</a>
                             </div> 
                         </div>
