--- a/Oasis.html
+++ b/Oasis.html
@@ -10,12 +10,11 @@
 
   gtag('config', 'UA-111722565-1');
 </script>
-
+		<title>Shop For A Smile | NSS Bits Pilani</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<title>Oasis | NSS Bits Pilani</title>
+		<meta name="description" content="Shop For A Smile aims to promote various NGOs that work tirelessly for social welfare. At our stall, a variety of products made by rural women and the specially abled, procured by the NGOs are kept on sale.">
+		<meta name="keywords" content="Oasis,oasis,stall,Stall,Shop,shop,Smile,smile,Nss,nss,NSS,Bits,BITS,bits,Pilani,pilani">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/prettyPhoto.css" rel="stylesheet">
@@ -70,9 +69,9 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
 									<li><a href="Junoon.html">Junoon</a></li>
-									<li class="active"><a href="Oasis.html">Oasis Stall</a></li>
+									<li class="active"><a href="Oasis.html">Shop For A Smile</a></li>
 									<li><a href="BDC.html">Blood Donation Camp</a></li>
-									<li><a href="YC.html">Youth Conference</a></li>
+									<li><a href="YC.html">Dhiti</a></li>
 								</ul>
 							</li>
 							
@@ -91,7 +90,7 @@
 			<div class="container text-center">
 				<div class="row" id="curve" class="card-panel transparent blue-grey lighten-5 z-depth-2">
 							<div class="col-xs-4 col-xs-offset-4">
-						<center><h1>Oasis Stall</h1></center>
+						<center><h1>Shop For A Smile</h1></center>
 						<br>
 						<h3><font color="#5882FA"><center>Within it is the power to create,nurture and transform.</font></h3>
 					</div>
@@ -104,8 +103,8 @@
 					<br><br>
 					By selling products acquired from different NGOs across India, we strive to prove that every little soul out there can act as an inspiration to millions. Through their undying spirit and never say die attitude, they have inspired us and we humbly hope to spread this joy. NSS salutes the various NGOs who work selflessly in this regard. 
 					<br>
-					NSS Oasis Stall 2014 exhibited products of 15 NGOs like Amla Birla Kendra, Women Synergy, WWF, MESH, etc from Delhi, Jaipur and Pilani. 
-					In 2013 the Oasis Stall has collaborated with MARD along with various NGOs to promote its theme "Women Empowerment". MARD has been working in India to create awareness amongst men about gender equality and instill a feeling of respect towards women. Its primary aim is to change the mindset of men and thereby herald a new era in society.
+					Shop For A Smile stall 2014 exhibited products of 15 NGOs like Amla Birla Kendra, Women Synergy, WWF, MESH, etc from Delhi, Jaipur and Pilani. 
+					In 2013 the Shop For A Smile stall has collaborated with MARD along with various NGOs to promote its theme "Women Empowerment". MARD has been working in India to create awareness amongst men about gender equality and instill a feeling of respect towards women. Its primary aim is to change the mindset of men and thereby herald a new era in society.
 					</p>
 				</div>
 			</div>
@@ -147,8 +146,8 @@
                         <ul>
                             <li><a href="Junoon.html">Junoon</a></li>
                             <li><a href="BDC.html">Blood Donation Camp</a></li>
-                            <li><a href="Oasis.html">Oasis Stall</a></li>
-                            <li><a href="YC.html">Youth Conference</a></li>
+                            <li><a href="Oasis.html">Shop For A Smile</a></li>
+                            <li><a href="YC.html">Dhiti</a></li>
                            
                         </ul>
                     </div>    
