--- a/Parisodh.html
+++ b/Parisodh.html
@@ -10,12 +10,12 @@
 
   gtag('config', 'UA-111722565-1');
 </script>
-
+        <title>Parishodh | NSS BITS Pilani</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<title>Parishodh | NSS BITS Pilani</title>
+		<meta name="description" content="Parishodh aims to identify Social, Environmental and other problems as well as the needs of marginalized poor.
+					design and innovate practical and affordable solutions to these problems using science and technology.">
+		<meta name="keywords" content="Parishodh,parishodh,Nss,nss,NSS,Bits,BITS,bits,Pilani,pilani">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/prettyPhoto.css" rel="stylesheet">
@@ -70,9 +70,9 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
 									<li><a href="Junoon.html">Junoon</a></li>
-									<li><a href="Oasis.html">Oasis Stall</a></li>
+									<li><a href="Oasis.html">Shop For A Smile</a></li>
 									<li><a href="BDC.html">Blood Donation Camp</a></li>
-									<li><a href="YC.html">Youth Conference</a></li>
+									<li><a href="YC.html">Dhiti</a></li>
 								</ul>
 							</li>
 						
@@ -100,7 +100,7 @@
 			<div class="container text-center">
 				<div class="row" id="font">
 					<p class="section" style="text-align:justify">
-					Parishodh aims to identify Social, Environmental and other problems as well as the needs of marginalized poor;
+					Parishodh aims to identify Social, Environmental and other problems as well as the needs of marginalized poor.
 					design and innovate practical and affordable solutions to these problems using science and technology.
 					Also,parishodh acts as an incubating agency that strives for the implementation of developed solutions through the Government, NGOs and Social Enterprises.
 <section class="container" style="text-align:justify">              
@@ -152,8 +152,8 @@
                         <ul>
                             <li><a href="Junoon.html">Junoon</a></li>
                             <li><a href="BDC.html">Blood Donation Camp</a></li>
-                            <li><a href="Oasis.html">Oasis Stall</a></li>
-                            <li><a href="YC.html">Youth Conference</a></li>
+                            <li><a href="Oasis.html">Shop For A Smile</a></li>
+                            <li><a href="YC.html">Dhiti</a></li>
                            
                         </ul>
                     </div>    
