--- a/YC.html
+++ b/YC.html
@@ -85,14 +85,14 @@
 
 		<section id="error" class="container text-center">
 		<div>
-		<img src="images/events/leap_photo.jpg" class="img-responsive" style="horizontal-align:center;width:100%" alt="LEAP Image">
+		<img src="images/events/leap_photo.png" class="img-responsive" style="horizontal-align:center;width:100%" alt="LEAP Image">
 		</div>
 			<div class="container text-center">
 				<div class="row" id="curve" class="card-panel transparent blue-grey lighten-5 z-depth-2">
 							<div class="col-xs-4 col-xs-offset-4">
 						<center><h1>Dhiti</h1></center>
 						<br>
-						<h3><font color="#5882FA"><center>Social Event For Solution To Social Problems</font></h3>
+						<h3><font color="#5882FA"><center>Technology Reaching Its Destiny</font></h3>
 					</div>
 				</div>
 			</div>
