--- a/school.html
+++ b/school.html
@@ -10,12 +10,12 @@
 
   gtag('config', 'UA-111722565-1');
 </script>
-
+		<title>School | BITS Pilani</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<title>School | BITS Pilani</title>
+		<meta name="description" content="School was established with the aim of propagating education amongst the citizens of Pilani and the nearby areas.
+as the privileged and lucky members of society who could afford studying in a prestigious institute like BITS">
+		<meta name="keywords" content="School,school,Nss,nss,NSS,Bits,BITS,bits,Pilani,pilani">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/prettyPhoto.css" rel="stylesheet">
@@ -70,9 +70,9 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Events <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
 									<li><a href="Junoon.html">Junoon</a></li>
-									<li><a href="Oasis.html">Oasis Stall</a></li>
+									<li><a href="Oasis.html">Shop For A Smile</a></li>
 									<li><a href="BDC.html">Blood Donation Camp</a></li>
-									<li><a href="YC.html">Youth Conference</a></li>
+									<li><a href="YC.html">Dhiti</a></li>
 								</ul>
 							</li>
 						
@@ -101,7 +101,7 @@
 			<div class="row" id="font">
 				<p class="section" style="text-align:justify">
 					School was established with the aim of propagating education amongst the citizens of Pilani and the nearby areas.
-As the privileged and lucky members of society who could afford studying in a prestigious institute like BITS,
+as the privileged and lucky members of society who could afford studying in a prestigious institute like BITS,
 the founder-students felt their responsibility for giving back to the society. 
 <section class="container" style="text-align:justify">              
 <b>WORKING:</b>
@@ -153,8 +153,8 @@ the founder-students felt their responsibility for giving back to the society.
                         <ul>
                             <li><a href="Junoon.html">Junoon</a></li>
                             <li><a href="BDC.html">Blood Donation Camp</a></li>
-                            <li><a href="Oasis.html">Oasis Stall</a></li>
-                            <li><a href="YC.html">Youth Conference</a></li>
+                            <li><a href="Oasis.html">Shop For A Smile</a></li>
+                            <li><a href="YC.html">Dhiti</a></li>
                            
                         </ul>
                     </div>    
