Front page and dhiti changes

--- a/YC.html
+++ b/YC.html
@@ -96,9 +96,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="container">
+			<div class="container text-center">
 				<div class="row" id="font">
-					<p class="section">
+					<p class="section" style="text-align:justify">
 					<h4>“Have faith in people. They are basically good and smart. Given the right
                      tools, they can do wonderful things.” – Steve Jobs.</h4>
                      Technology today has seeped into every aspect of our lives. But we must
@@ -121,7 +121,7 @@
                      <h5>Round 3: Presentation</h5>
                      Implementation: The winners of DHITI will get an opportunity to implement their prototypes under an NGO (Depends on the NGO).
                      <h5>Judging Criteria:</h5>
-                     <div style="text-align:center"><h6>a) Unique and innovative: They can be a modification of an already existing solution but should not be an exact replica of it.</h6>
+                     <div style="text-align:justify"><h6>a) Unique and innovative: They can be a modification of an already existing solution but should not be an exact replica of it.</h6>
                      <h6>b) Effective: They must provide better results than solutions which are already in use.</h6>
                      <h6>c) Cost-effective: The materials being used for implementing should be easily available and cheap.</h6>
                      <h6>d) Feasible: Keep in mind the target population/region. The ease of installation and the easy availability of the resources is also to be considered.</h6>
